<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="434dp"
        android:layout_height="258dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_bg_g_434"
        >

        <ImageView
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginTop="38dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_off"
            />

        <TextView
            android:id="@+id/quit_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="132dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:text="@string/quit_content"
            android:textAlignment="center"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:background="@drawable/ic_bt_b_140"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:layout_marginStart="7dp"
                android:background="@drawable/ic_bt_g_140"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="center"
                />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>